--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@ Bootstrap 5 HTML CSS Template
                                   <img src="images/logo.jpg" alt="Logo" class="img-fluid w-100 h-100 object-fit-cover">
                               
                                   <div class="about-video-info d-flex flex-column position-absolute top-0 start-0 w-100 h-100 p-3">
-                                    <h4 class="mt-auto text-white">Kami hadir dengan ambisi.</h4>
-                                    <h4 class="text-white">Siap mewujudkan mimpi anda.</h4>
+                                    <h4 class="mt-auto text-white">we are here to help you.</h4>
+                                    <h4 class="text-white">improve the quality of your company.</h4>
                                   </div>
                                 </div>
                               </div>
